--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A Selft taught flutter developer, technical writer and open source contributor.">
+  <meta name="description" content="Devloper and Designer">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -25,7 +25,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Hamza</title>
+  <title>Kathan</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -35,7 +35,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=866077569');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=641847258');
       });
     }
   </script>
